2009-06-xx:
    * version 0.7.2
    * Add clock to top of page - can be enabled by setting
      the "gamefox.elements.clock" pref to true
    * Undisable "Post Message" button after successfully making a post
    * Enable middle-clicking for tracked topics list in the context menu
    * Fix a few third-party cookie issues for Firefox 3.5

2009-05-17:
    * version 0.7.1
    * Fix removal of old stylesheets on update
    * Fix horizontal scroll bar that was appearing for some people
    * Fix QuickWhois for your own profile
    * Fix "Hide signatures" CSS with above message data
    * Fix signature importing and exporting in the options window
    * Fix message header links in archived topics
    * Fix new post label on the active messages list not disappearing
    * New CSS: FAQ frames

2009-04-28:
    * version 0.7
    * v11 compatibility

2009-04-24:
    * version 0.6.11.2
    * Fix some broken prefs in Firefox 2
    * Fix non-ASCII characters in some prefs

2009-04-23:
    * version 0.6.11.1
    * Back-up prefs before updating them to the new format
    * Fix date in quote headers when using left of message data
    * Fix bug that could cause prefs to be lost on update

2009-04-23:
    * version 0.6.11
    * Add character map above the post message box
    * New CSS: Character map - makes the character map appear in a popup
    * Move the "Active Messages" and "Tracked Topics" context menu items out of
      the "Tags" submenu and into a new "Links" submenu
    * Fix a quoting bug that could cause part of the QuickWhois information to
      appear in the quoted message header
    * Sigs are now removed on all platforms when using selection quoting
    * Add an option to go back to the board after QuickPosting a message
    * Add an option to disable the "blank post" warning
    * Add tooltip for message detail and other message header links
    * Fix an issue with the signature-wrapping spans that would break other