@@ -54,6 +54,8 @@ var gamefox_css =
             'Converts links in the message header (message detail, delete, filter, quote)'
               + ' to icons.\n\nIcons courtesy of http://www.pinvoke.com/',
             'Poo Poo Butter', false],
+        'remove-signatures.css': ['Remove signatures',
+            'Removes signatures in posts.', '', false],
         'status-default.css': ['Status icons (normal)',
             'Only show topic status icons for closed/sticky topics. This CSS ' +
             'conflicts with "Status icons (classic)".', '', false],
