@@ -1,0 +1,4 @@
+@-moz-document domain(gamefaqs.com)
+{
+    .gamefox-signature { display: none; }
+}
