@@ -5,6 +5,7 @@
     * Undisable "Post Message" button after successfully making a post
     * Enable middle-clicking for tracked topics list in the context menu
     * Fix a few third-party cookie issues for Firefox 3.5
+    * New CSS: Remove signatures
 
 2009-05-17:
     * version 0.7.1
